--- a/index.html
+++ b/index.html
@@ -293,13 +293,14 @@
               <p class="mini-label">{{ t('chart.label') }}</p>
               <h3>{{ t('chart.title') }}</h3>
             </div>
-            <canvas
-              ref="chartEl"
-              class="chart-canvas"
-              height="480"
-              :aria-label="t('chart.aria')"
-              role="img"
-            ></canvas>
+            <div class="chart-container">
+              <canvas
+                ref="chartEl"
+                class="chart-canvas"
+                :aria-label="t('chart.aria')"
+                role="img"
+              ></canvas>
+            </div>
           </article>
         </section>
       </main>
@@ -337,6 +338,6 @@
       </div>
     </div>
 
-    <script type="module" src="app.js?v=17"></script>
+    <script type="module" src="app.js?v=19"></script>
   </body>
 </html>
